--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,14 @@ html, body {
   
 }
 
+li{
+  display: inline;
+}
+
+.txtLogo{
+  font-size: 30px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 /*.App{
   background-color: #464f4f;
 }*/
@@ -50,6 +58,7 @@ html, body {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-right: 10px;
+  
   font-family: sans-serif;
   font-size: 18px;
 }
@@ -88,4 +97,14 @@ hr{
 :hover.btnRequestConvo{
   background-color: #000000;
   size: 20px;
+}
+
+.msgIcon{
+  margin-left: 60%;
+  font-size: 22px;
+  color: #30593a;
+}
+
+:hover.msgIcon{
+  color: #b20202;
 }
