--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
   top: 8%;
   left: 5%;
   max-width: 90%;
-  max-height: 84%;
+  /*max-height: 84%;*/
   width: 90%;
   height: 84%;
   border-width: 2px;
